--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
         <iframe src="https://onedrive.live.com/embed?cid=36D9855815FB048B&resid=36D9855815FB048B%2138575&authkey=AOmKamnueJdenk4&em=2" width="560" height="315" frameborder="0" scrolling="no"></iframe>
     </div>
 </div>
+<div>
+    <video controls="controls" width="800" height="45"
+       name="Video Name" src="IMG_1939.MOV">
+    </video>
+</div>     
 </body>
 </html>
