--- a/сайт.html
+++ b/сайт.html
@@ -34,9 +34,7 @@
     </div>
 </div>
 <div>
-    <video controls="controls" width="800" height="45"
-       name="Video Name" src="IMG_1939.MOV">
-    </video>
-</div>    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aRhHcZ1zFcw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>   
 </body>
 </html>
