--- a/сайт.html
+++ b/сайт.html
@@ -25,12 +25,12 @@
 </div>
 <div class="container">
     <div class="video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/H1Vnys_GC4Y?controls=0&amp;start=7;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/glpo2RuD7gw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
 </div>
 <div class="container">
     <div class="presentation">
-        <iframe src="https://onedrive.live.com/embed?cid=36D9855815FB048B&resid=36D9855815FB048B%2138575&authkey=AOmKamnueJdenk4&em=2" width="560" height="315" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://onedrive.live.com/embed?cid=EBD8E306E22CEA0B&resid=EBD8E306E22CEA0B%21215&authkey=AFV_u6yU6P5Leus&em=2" width="560" height="315" frameborder="0" scrolling="no"></iframe>
     </div>
 </div>
 <div>
